tests/auto/qquickiconimage/data/imageProvider.qml
@@ -1,0 +1,9 @@
+import QtQuick 2.10
+import QtQuick.Controls 2.3
+import QtQuick.Controls.impl 2.3
+import QtQuick.Templates 2.3 as T
+
+IconLabel {
+    icon.color: "transparent"
+    icon.source: "image://provider/red"
+}
